--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "buildtest": "cross-env MODE=test node build/build.js"
   },
   "dependencies": {
-    "amfe-flexible": "^2.2.1",
     "axios": "^0.17.1",
+    "cssnano": "^3.10.0",
     "lodash": "^4.17.4",
+    "postcss-aspect-ratio-mini": "^0.0.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-px-to-viewport": "^0.0.3",
+    "postcss-viewport-units": "^0.1.3",
+    "postcss-write-svg": "^3.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -40,6 +45,7 @@
     "cross-env": "^5.1.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "cssnano-preset-advanced": "^4.0.0-rc.2",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -66,6 +72,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-plugin-px2rem": "^0.7.0",
+    "postcss-url": "^7.3.1",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
